[gd_scene load_steps=10 format=2]

[ext_resource path="res://CrawlyBuggyAI.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Player & Enemy/Crawly Buggy.png" type="Texture" id=2]
[ext_resource path="res://Audio/SFX/Damage(Enemy).wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Damage(Player).wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 11.9738
height = 23.7086

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.4696
height = 24.7946

[sub_resource type="CircleShape2D" id=3]
radius = 170.515

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}

[node name="Crawly Buggy" type="KinematicBody2D" groups=[
"Enemy",
]]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 2
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.111362, 1.98714 )
rotation = -1.57079
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 2.00452 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
rotation = -1.57079
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 2.00452 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleBug = SubResource( 4 )
anims/RunBug = SubResource( 5 )

[node name="JumpTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="HitPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
